set up rtmp
